ApplicationWindow: respect explicitly set background size

4a2466ea075676e8953ac7e9729492a0ace02c32 made ApplicationWindow
explicitly set the background's width and height if they hadn't
already been explicitly set. However, in certain cases widthValid()
and heightValid() were checked before background's deferred execution
had completed. This meant that the user's width and height bindings
hadn't been evaluated yet, and hence widthValid and heightValid were
false.

Fix this by waiting until execution has finished before checking.

Fixes: QTBUG-124744
Pick-to: 6.7 6.6 6.5
Change-Id: I1007f638a60c1ae4e0b07dbf91d5583bbfdcf8fb
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit a9e6cbb06e0edf71d73b6b248839e28191a5a780)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>