src/quicktemplates/qquickapplicationwindow.cpp
@@ -105,6 +105,7 @@ public:
 
     QQmlListProperty<QObject> contentData();
 
+    void updateHasBackgroundFlags();
     void relayout();
 
     void itemGeometryChanged(QQuickItem *item, QQuickGeometryChange change, const QRectF &diff) override;
@@ -172,6 +173,16 @@ static void layoutItem(QQuickItem *item, qreal y, qreal width)
     }
 }
 
+void QQuickApplicationWindowPrivate::updateHasBackgroundFlags()
+{
+    if (!background)
+        return;
+
+    QQuickItemPrivate *backgroundPrivate = QQuickItemPrivate::get(background);
+    hasBackgroundWidth = backgroundPrivate->widthValid();
+    hasBackgroundHeight = backgroundPrivate->heightValid();
+}
+
 void QQuickApplicationWindowPrivate::relayout()
 {
     Q_Q(QQuickApplicationWindow);
@@ -207,9 +218,7 @@ void QQuickApplicationWindowPrivate::itemGeometryChanged(QQuickItem *item, QQuic
     if (!insideRelayout && item == background && change.sizeChange()) {
         // Any time the background is resized (excluding our own resizing),
         // we should respect it if it's explicit by storing the values of the flags.
-        QQuickItemPrivate *backgroundPrivate = QQuickItemPrivate::get(background);
-        hasBackgroundWidth = backgroundPrivate->widthValid();
-        hasBackgroundHeight = backgroundPrivate->heightValid();
+        updateHasBackgroundFlags();
     }
 
     relayout();
@@ -304,8 +313,12 @@ void QQuickApplicationWindowPrivate::executeBackground(bool complete)
 
     if (!background || complete)
         quickBeginDeferred(q, backgroundName(), background);
-    if (complete)
+    if (complete) {
         quickCompleteDeferred(q, backgroundName(), background);
+        // See comment in setBackground for why we do this here.
+        updateHasBackgroundFlags();
+        relayout();
+    }
 }
 
 QQuickApplicationWindow::QQuickApplicationWindow(QWindow *parent)
@@ -381,12 +394,15 @@ void QQuickApplicationWindow::setBackground(QQuickItem *background)
         if (qFuzzyIsNull(background->z()))
             background->setZ(-1);
 
-        QQuickItemPrivate *backgroundPrivate = QQuickItemPrivate::get(background);
-        d->hasBackgroundWidth = backgroundPrivate->widthValid();
-        d->hasBackgroundHeight = backgroundPrivate->heightValid();
+        // If the background hasn't finished executing then we don't know if its width and height
+        // are valid or not, and so relayout would see that they haven't been set yet and override
+        // any bindings the user might have.
+        if (!d->background.isExecuting()) {
+            d->updateHasBackgroundFlags();
 
-        if (isComponentComplete())
-            d->relayout();
+            if (isComponentComplete())
+                d->relayout();
+        }
     }
     if (!d->background.isExecuting())
         emit backgroundChanged();
